--- a/template.tex
+++ b/template.tex
@@ -137,7 +137,7 @@ The introduction should briefly place the study in a broad context and highlight
 In airlines, the spatial distribution of aircraft stations is a non-Euclidean structure, that is, the number of stations around each station is uncertain, and even if two stations are adjacent, they may not actually communicate with each other, resulting in no spatial relationship between their traffic. Therefore, traditional convolutional neural network (CNN) cannot accurately obtain their spatial information. At this point, multiple sites can be abstracted into A graph (see Figure \ref{fig:stations}). Features are extracted from the original input data to obtain the result of feature mapping of multiple channels. The intercommunication relationship between each site is represented by adjacency matrix A.
 \begin{figure}[htp]
     \centering
-    % \includegraphics[width=8 cm]{Definitions/logo/-mdpi}
+    \includegraphics[width=8 cm]{imgs/GCN.png}
     \caption{The distribution of the stations.}
     \label{fig:stations}
 \end{figure}
